# automatizia-inventario-backend

./: .env  .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/db/: connection.rs
src/models/: mod.rs  user.rs
src/routes/: auth.rs  mod.rs  users.rs
src/security/: hashing.rs  middleware.rs  mod.rs  token.rs
src/services/: auth.rs  mod.rs  users.rs
src/utils/: error.rs
